fix: adjust spacing and media queries

--- a/pages/04-three-columns-preview/sass/components/_card.scss
+++ b/pages/04-three-columns-preview/sass/components/_card.scss
@@ -41,7 +41,7 @@
     }
   }
 
-  &:nth-child(2) {
+  &:nth-of-type(1) {
     background-color: $color-primary;
 
     & > .btn {
@@ -49,7 +49,7 @@
     }
   }
 
-  &:nth-child(3) {
+  &:nth-of-type(2) {
     background-color: $color-secondary;
 
     & > .btn {
@@ -57,7 +57,7 @@
     }
   }
 
-  &:nth-child(4) {
+  &:nth-of-type(3) {
     background-color: $color-tertiary;
 
     & > .btn {
