--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,10 +7,106 @@ $yukio-primary-dark: #4c0000;
 
 // TYPOGRAPHY
 $standart-font-size: 1.6rem;
+$desktop-title-size: 2.4rem;
 $standart-title-size: 2rem;
+$standart-tag-size: 1rem;
+$desktop-tag-size: 1.4rem;
 
-$heading-mobile: 2.4rem;
-$heading-desktop: 4.8rem;
+$heading-mobile: 3.2rem;
+$heading-desktop: 6.4rem;
+
+/* latin-ext */
+@font-face {
+  font-family: "Sora";
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/sora/v9/xMQbuFFYT72XzQspDre2.woff2)
+    format("woff2");
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
+    U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: "Sora";
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/sora/v9/xMQbuFFYT72XzQUpDg.woff2)
+    format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
+}
+/* latin-ext */
+@font-face {
+  font-family: "Sora";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/sora/v9/xMQbuFFYT72XzQspDre2.woff2)
+    format("woff2");
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
+    U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: "Sora";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/sora/v9/xMQbuFFYT72XzQUpDg.woff2)
+    format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
+}
+/* latin-ext */
+@font-face {
+  font-family: "Sora";
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/sora/v9/xMQbuFFYT72XzQspDre2.woff2)
+    format("woff2");
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
+    U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: "Sora";
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/sora/v9/xMQbuFFYT72XzQUpDg.woff2)
+    format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
+}
+/* latin-ext */
+@font-face {
+  font-family: "Sora";
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/sora/v9/xMQbuFFYT72XzQspDre2.woff2)
+    format("woff2");
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
+    U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: "Sora";
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/sora/v9/xMQbuFFYT72XzQUpDg.woff2)
+    format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
+}
 
 // PADDING
 $padding-smallest: 1rem;
@@ -21,7 +117,10 @@ $spacing-smallest: 0.8rem;
 $spacing-small: 1rem;
 $spacing-medium: 1.6rem;
 $spacing-large: 2rem;
-$spacing-larger: 2.5rem;
+$spacing-larger: 3.5rem;
+$spacing-largest: 4.5rem;
+$spacing-xl: 5rem;
+$spacing-xxl: 10rem;
 
 //// BREAK-POINTS
 @mixin tablet {
@@ -31,7 +130,7 @@ $spacing-larger: 2.5rem;
 }
 
 @mixin desktop {
-  @media screen and (min-width: 65.25em) {
+  @media screen and (min-width: 74em) {
     @content;
   }
 }
@@ -62,12 +161,19 @@ body {
   background-color: $yukio-bg;
 }
 
+a,
+a:link,
+a:visited {
+  text-decoration: none;
+}
+
 .title {
   padding: $padding-smallest;
   text-align: center;
   text-transform: uppercase;
   font-size: $heading-mobile;
-  color: #fff;
+  font-weight: 600;
+  color: $yukio-primary;
   margin-bottom: $spacing-small;
 
   @include desktop {
@@ -110,7 +216,7 @@ body {
   margin-top: $spacing-small;
 
   @include desktop {
-    gap: $spacing-larger;
+    gap: $spacing-large;
 
     a:focus {
       outline: none;
@@ -148,13 +254,14 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   gap: $spacing-large;
-  margin-bottom: 10rem;
+  margin-bottom: $spacing-xl;
 
   @include desktop {
+    margin-bottom: $spacing-xxl;
+
     a:focus {
       & ~ .challenge__title {
         opacity: 1;
-        visibility: visible;
       }
 
       & ~ .challenge__title::after {
@@ -165,6 +272,11 @@ body {
       .challenge__preview-image {
         transform: scale(2);
         filter: brightness(1);
+      }
+
+      & ~ .challenge__tag {
+        opacity: 1;
+        transform: scaleY(1);
       }
     }
   }
@@ -185,7 +297,10 @@ body {
   }
 
   &__title {
+    width: 100%;
     font-size: $standart-title-size;
+    font-weight: 700;
+    text-transform: uppercase;
     color: $yukio-primary-dark;
     position: absolute;
     top: 0;
@@ -194,19 +309,18 @@ body {
 
     // MAKES TITLE INVISIBLE ON DESKTOP
     @include desktop {
+      font-size: $desktop-title-size;
       opacity: 0;
-      visibility: hidden;
       transition: 0.25s;
     }
 
     &::after {
       content: "";
-      width: 400%;
+      width: 150%;
       height: 100%;
       background-color: $yukio-primary;
       position: absolute;
       left: -10%;
-      top: 0;
       z-index: -1;
 
       // MAKES TITLE-BG SHRINK ON DESKTOP
@@ -235,7 +349,6 @@ body {
     // MAKES TITLE VISIBLE ON HOVERED STATE
     &:hover &__title {
       opacity: 1;
-      visibility: visible;
 
       // EXPANDS TITLE-BG ON HOVERED STATE
       &::after {
@@ -248,6 +361,64 @@ body {
     &:hover &__preview-image {
       transform: scale(2);
       filter: brightness(1);
+    }
+  }
+
+  // TAGS
+  &__tag {
+    padding: 0.5rem 1rem;
+    border-radius: 0.75rem;
+    background-color: $yukio-primary;
+    text-transform: uppercase;
+    font-size: $standart-tag-size;
+    color: $yukio-primary-dark;
+    font-weight: 600;
+    position: absolute;
+    z-index: 10;
+    box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.25);
+
+    @include desktop {
+      font-size: $desktop-tag-size;
+    }
+
+    &--level {
+      border-radius: 0 0.75rem 0.75rem 0;
+      top: $spacing-larger;
+      left: 0;
+
+      @include desktop {
+        top: $spacing-largest;
+      }
+    }
+
+    &--repository {
+      padding: 1rem 1.25rem;
+      bottom: $spacing-larger;
+      right: $spacing-large;
+
+      @include desktop {
+        &:focus,
+        &:hover {
+          outline: none;
+          opacity: 1;
+          transform: scaleY(1) translateY(-5px) !important;
+          filter: brightness(1.25);
+        }
+      }
+    }
+
+    // MAKES TAG INVISIBLE ON DESKTOP
+    @include desktop {
+      opacity: 0;
+      transform: scaleY(0);
+      transition: transform 0.25s, opacity 0.25s, filter 0.25s;
+    }
+  }
+  @include desktop {
+    // MAKES TAG VISIBLE ON HOVERED STATE
+    &:hover &__tag {
+      opacity: 1;
+      transform: scaleY(1);
     }
   }
 }
